--- a/Personal-Info/composer.json
+++ b/Personal-Info/composer.json
@@ -11,7 +11,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "dingo/api": "^2",
+        "prettus/l5-repository": "^2.6",
+        "prettus/laravel-validation": " 1.1.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
